--- a/index.html
+++ b/index.html
@@ -641,10 +641,10 @@
         <div id="plany" class="page">
                
                 <img id="m-b-i" class="shadow-strong"  src="./img/mury_2.png" alt="">
-                <img data-url="../img/Rynek/Plany/Obrobione Plany/1. Plan szwedzki 1702.jpg"  class="plan-kolo left-kolo first-row" src="./img/Rynek/Plany/plany-kola/1. Plan szwedzki 1702.jpg" alt="">
+                <img data-url="./img/Rynek/Plany/Obrobione Plany/1. Plan szwedzki 1702.jpg"  class="plan-kolo left-kolo first-row" src="./img/Rynek/Plany/plany-kola/1. Plan szwedzki 1702.jpg" alt="">
                 <img data-url="./img/Rynek/Plany/Obrobione Plany/2. Frag. planu pruskiego z 1795, sekcja 5.jpg" class="plan-kolo midle-kolo first-row" src="./img/Rynek/Plany/plany-kola/2. Frag. planu pruskiego z 1795, sekcja 5.jpg" alt="">
                 <img data-url="./img/Rynek/Plany/Obrobione Plany/2a. Frag. planu pruskiego z 1795, sekcja 1.jpg" class="plan-kolo right-kolo first-row" src="./img/Rynek/Plany/plany-kola/2a. Frag. planu pruskiego z 1795, sekcja 1.jpg" alt="">
-                <img data-url="../img/Rynek/Plany/Obrobione Plany/3. Plan francuski 1809.jpg" class="plan-kolo left-kolo second-row" src="./img/Rynek/Plany/plany-kola/3. Plan francuski 1809.jpg" alt="">
+                <img data-url="./img/Rynek/Plany/Obrobione Plany/3. Plan francuski 1809.jpg" class="plan-kolo left-kolo second-row" src="./img/Rynek/Plany/plany-kola/3. Plan francuski 1809.jpg" alt="">
                 <img data-url="./img/Rynek/Plany/Obrobione Plany/4.-Plan-Częstochowy-Księstwo-Warszawskie.jpg" class="plan-kolo midle-kolo second-row" src="./img/Rynek/Plany/plany-kola/4.-Plan-Częstochowy-Księstwo-Warszawskie.jpg" alt="">
                 <img data-url="./img/Rynek/Plany/5. Plan rosyjski z 1812.jpg" class="plan-kolo right-kolo second-row" src="./img/Rynek/Plany/plany-kola/5. Plan rosyjski z 1812.jpg" alt="">
 
